# kirikiri2

kirikiri2/: .gitignore  CMakeLists.txt
kirikiri2/src/core/base/: StorageIntf.cpp  TextStream.cpp  UtilStreams.cpp  XP3Archive.cpp  XP3Archive.h
kirikiri2/src/core/base/win32/: FuncStubs.cpp  PluginImpl.cpp  PluginImpl.h  StorageImpl.cpp  StorageImpl.h  SusieArchive.cpp  SysInitImpl.h
kirikiri2/src/core/environ/win32/: tvpwin32.cpp
kirikiri2/src/core/msg/: MsgIntf.cpp
kirikiri2/src/core/msg/win32/: MsgImpl.cpp
kirikiri2/src/core/tjs2/: tjsArray.cpp  tjsConfig.cpp  tjsConfig.h  tjsError.h  tjsInterCodeExec.cpp  tjsMath.cpp  tjsRegExp.cpp  tjsString.h  tjsVariantString.cpp
kirikiri2/src/core/utils/: DebugIntf.cpp
kirikiri2/src/core/utils/win32/: ThreadImpl.cpp  TickCount.cpp
kirikiri2/src/core/visual/: GraphicsLoaderIntf.cpp  tvpgl.h
kirikiri2/src/core/visual/win32/: GraphicsLoaderImpl.cpp  GraphicsLoaderImpl.h
kirikiri2/src/hack/: cxdec.idb  hack.cpp  hack.h
kirikiri2/src/hack/patch_cxdec/: cxdec.dif  cxdec.tpm  cxdec.tpm.patched  patch.py
kirikiri2/visualize/: run.py
